# mlops-platform

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.dvc/: .gitignore
configs/: config.yaml
configs/model/: catboost.yaml  lightgbm.yaml  resnet18.yaml  resnet34.yaml  resnet50.yaml
configs/train/: default_train.yaml
docker/: Dockerfile  docker-compose.yaml
src/: schemas.py  train.py
src/models/: base.py  neural_net.py
